# wgsl-bindgen

./: .clippy.toml  .rustfmt.toml  Cargo.toml
example/: Cargo.toml  build.rs
example/src/: main.rs  overlay.rs  shader_bindings.rs  simple_text.rs
example/src/demos/: fullscreen_effects_demo.rs  gradient_triangle_demo.rs  mod.rs  particle_compute_demo.rs  texture_array_demo.rs
wesl_bindgen/: CHANGELOG.md  Cargo.toml  release.toml
wesl_bindgen/src/: lib.rs  structs.rs  test_helper.rs  types.rs  wgsl.rs  wgsl_type.rs
wesl_bindgen/src/bevy_util/: deptree.rs  module_path_resolver.rs  name_demangle.rs  parse_imports.rs  source_file.rs
wesl_bindgen/src/bindgen/: errors.rs  wgsl_bindgen_impl.rs
wesl_bindgen/src/generate/: consts.rs  entry.rs  mod.rs  pipeline.rs  shader_module.rs  shader_registry.rs  vertex_input_collector.rs
wesl_bindgen/src/naga_util/: module_to_source.rs
wesl_bindgen/src/quote_gen/: constants.rs  mod.rs  rust_module_builder.rs  rust_source_item.rs  rust_struct_builder.rs  rust_type_info.rs  token_utils.rs
wesl_bindgen/src/snapshots/: struct_visibility.snap  wesl_bindgen__test__create_shader_module_embed_source.snap  write_all_structs_bytemuck_input_layout_validation.snap  write_all_structs_encase.snap  write_all_structs_glam.snap  write_all_structs_nalgebra.snap  write_all_structs_rust.snap  write_all_structs_serde_encase.snap  write_all_structs_skip_stage_outputs.snap  write_atomic_types.snap  write_nonpower_of_2_mats.snap  write_nonpower_of_2_mats_for_bytemuck_glam_option.snap  write_nonpower_of_2_mats_for_bytemuck_option.snap  (+3 more)
(+69 files in other folders)
