[workspace]
# wgpu requires the newer resolver
resolver = "3"
members = ["wesl_bindgen", "example"]

[workspace.package]
version = "0.22.0"
authors = ["TimTheBig", "swoorup(WGSL Fork)", "ScanMountGoat(Original Fork)"]
edition = "2021"
repository = "https://github.com/TimTheBig/wesl_bindgen"
license = "MIT"
documentation = "https://docs.rs/wesl_bindgen"

[workspace.dependencies]
# hash
blake3 = "1.8"
fxhash = "0.2"

# hashmap
indexmap = "2.11"

# type cast
bytemuck = "1.23"
encase = "0.11"

# str case convertion
case = "1.0"
heck = "0.5"

# encoding
data-encoding = "2.9"

# trait derive
educe = "0.6"
derive_more = { version = "2.0", features = ["full"] }
# macros
derive_builder = "0.20"
strum = "0.27"
strum_macros = "0.27"

# bitflags
enumflags2 = "0.7"

# async
futures = "0.3"

# geometry
glam = "0.30"

# output
colored = "3.0"
miette = "7.6"
# testing
pretty_assertions = "1.4"
insta = "1.43"

# shader parce and transform
naga = { version = "26.0", features = ["wgsl-in", "wgsl-out"] }
naga_oil = "0.19"
wgpu = "26.0"
wgpu-types = "26.0"

# proc-macro
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
prettyplease = "0.2"

# regex
regex = "1.11"
regex-syntax = "0.8"

# array vec
smallvec = "1.15"
smol_str = "0.3"

# utils
thiserror = "2.0"
indoc = "2.0"
stdext = "0.3.3"
# path utils
include_absolute_path = "0.1"
pathdiff = "0.2"

# other
winit = "0.30"
toml = "0.9"
